Basic HTML layout of the beatmaker screen

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(ui-elements.css);
 @import url(first.css);
 @import url(second.css);
+@import url(beatmaker.css);
 
 @font-face {
     font-family: "HelveticaNeue";
