--- a/css/ui-elements.css
+++ b/css/ui-elements.css
@@ -52,6 +52,11 @@ p {
     margin: 0;
 }
 
+.buttons:hover {
+    rotate: -10deg;
+    transition: 0.5s;
+}
+
 /* .buttons:hover {
     border: 0.4vw solid #868686;
     transition: .05s;
