--- a/css/beatmaker.css
+++ b/css/beatmaker.css
@@ -15,8 +15,9 @@
 .beat {
     box-sizing: border-box;
 
-    height: 100%;
+    max-height: 100%;
     width: 75%;
+    aspect-ratio: 1.3 / 1;
 
     display: flex;
     flex-direction: column;
@@ -119,10 +120,11 @@
     align-items: center;
     gap: -763px;
 
-    height: 100%;
+    max-height: 100%;
     width: 25%;
+    aspect-ratio: 1 / 2.3;
 
-    padding: 1.5vw;
+    padding: 0vw 1.5vw 1.5vw 1.5vw;
 
     border-radius: 2.5vw;
     border: 0.3vw solid #000;
