--- a/css/cardeditor.css
+++ b/css/cardeditor.css
@@ -8,26 +8,19 @@
     width: 100vw;
     height: 100vh;
 
-    padding: 6%;
+    padding: 4%;
 
-    gap: 4%;
+    gap: 4vw;
 }
 
 .card {
     box-sizing: border-box;
 
-    max-height: 100%;
-    width: 50%;
+    max-width: 100%;
+    width: 100%;
     aspect-ratio: 3 / 4;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 4%;
-
     padding: 2vw;
-
     border: 0.3vw solid #000;
 
     background: #FFF;
@@ -44,8 +37,9 @@
     align-items: center;
 
     max-height: 100%;
-    width: 50%;
-    aspect-ratio: 3 / 4;
+    max-width: 55%;
+    aspect-ratio: 1 / 1;
+
     padding: 6% 4% 4% 4%;
 
     border-radius: 2.5vw;
@@ -65,33 +59,33 @@
 /* ФОРМЫ */
 
 .m-shapes {
+    object-fit: contain;
     height: 100%;
+
+    cursor: pointer;
 }
 
 .editor-shapes {
     width: 100%;
-    height: 20%;
+    height: 37%;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-    gap: 1vw;
 }
 
 .es-horizontal {
     height: 100%;
+    max-width: 30%;
 
     display: flex;
     flex-direction: column;
-    align-items: center;
-
-    gap: 1vw;
+    align-items: end;
+    justify-content: space-between;
 }
 
 .msh {
-    width: 50%;
-    object-fit: contain;
+    max-height: 43%;
 }
 
 /* ЦВЕТА */
@@ -103,7 +97,7 @@
 }
 
 .coloring-colors {
-    width: 50%;
+    width: 45%;
 
     flex-wrap: wrap;
 
@@ -186,4 +180,33 @@
 
 .svgmultiply {
     width: 68%;
+}
+
+/* СЛАЙДЕР  */
+
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    background: none;
+    cursor: pointer;
+
+    width: 100%;
+    height: 0.3vw;
+}
+
+.slider::-webkit-slider-runnable-track {
+    background: #000;
+    height: 0.3vw;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+
+    width: 3vw;
+    height: 3vw;
+    border: 0.3vw solid #000;
+    border-radius: 50%;
+    background: #fff;
+
+    margin-top: -1.3vw;
 }
