--- a/css/ui-elements.css
+++ b/css/ui-elements.css
@@ -40,7 +40,7 @@ p {
     border: 0.3vw solid #000000;
     border-radius: 50%;
     background-color: white;
-    padding: 24px;
+    padding: 1.5vw;
     font-size: 6vw;
 
     width: 8vw;
@@ -76,4 +76,9 @@ p {
     background-color: white;
 
     margin: -0.5vw;
+}
+
+.back-arrow-svg {
+    width: 100%;
+    aspect-ratio: 1 / 1;
 }
