--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url(second.css);
 @import url(beatmaker.css);
 @import url(cardeditor.css);
+@import url(final.css);
 
 @font-face {
     font-family: "HelveticaNeue";
