--- a/css/cardeditor.css
+++ b/css/cardeditor.css
@@ -16,7 +16,7 @@
 .card {
     box-sizing: border-box;
 
-    max-width: 100%;
+    max-height: 100%;
     width: 100%;
     aspect-ratio: 3 / 4;
 
@@ -40,7 +40,7 @@
     max-width: 55%;
     aspect-ratio: 1 / 1;
 
-    padding: 6% 4% 4% 4%;
+    padding: 6% 5% 6% 5%;
 
     border-radius: 2.5vw;
     border: 0.3vw solid #000;
@@ -48,12 +48,18 @@
     background: #FFF;
 }
 
-/* НАЗАД */
+/* НИЖНИЕ КНОПКИ */
 
 .card-back {
     position: absolute;
-    bottom: 3vw;
-    left: 3vw;
+    bottom: 2vw;
+    left: 2vw;
+}
+
+.card-done {
+    position: absolute;
+    bottom: 2vw;
+    right: 2vw;
 }
 
 /* ФОРМЫ */
@@ -111,6 +117,8 @@
     aspect-ratio: 1/1;
 
     border-radius: 50%;
+
+    cursor: pointer;
 }
 
 #ec-red {
@@ -158,6 +166,8 @@
 
     border: 0.3vw solid #000;
     border-radius: 2vw 0 0 2vw;
+
+    cursor: pointer;
 }
 
 .cm-multiply {
@@ -172,6 +182,8 @@
     border-radius: 0 2vw 2vw 0;
 
     margin-left: -0.3vw;
+
+    cursor: pointer;
 }
 
 .svgnormal {
@@ -183,6 +195,13 @@
 }
 
 /* СЛАЙДЕР  */
+
+.editor-slider {
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+}
 
 .slider {
     -webkit-appearance: none;
