--- a/css/second.css
+++ b/css/second.css
@@ -12,7 +12,6 @@
 }
 
 .sbeat {
-    width: auto;
     max-width: 50%;
     height: 100%;
 
@@ -20,22 +19,18 @@
 }
 
 .sbeatimg {
-    height: 100%;
     max-width: 100%;
+    height: 100%;
 
     object-fit: contain;
 }
 
 .scard {
-    box-sizing: border-box;
-
-    width: auto;
     max-width: 50%;
     height: 100%;
 
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .scardimg {
@@ -56,7 +51,6 @@
 
     display: flex;
     align-items: center;
-    justify-content: space-between;
 
     width: 100vw;
     height: 100vh;
@@ -89,7 +83,7 @@
     align-items: center;
 }
 
-/* БИТ */
+/* КНОПКА БИТ */
 
 .sbrow11 {
     z-index: 1;
@@ -121,7 +115,7 @@
     color: #ffffff;
 }
 
-/* ОТКРЫТКА */
+/* КНОПКА ОТКРЫТКА */
 
 .sbrow21 {
     z-index: 1;
@@ -143,4 +137,27 @@
 .sb:hover .sbrow22 {
     rotate: 1deg;
     transition: 0.3s rotate;
+}
+
+/* МОБИЛКА */
+
+@media (max-width: 640px) {
+    .second {
+        flex-direction: column;
+    }
+
+    .overlay {
+        flex-direction: column;
+    }
+
+    .sbeat {
+        height: 100%;
+        max-width: 90%;
+    }
+
+    .scard {
+        height: 100%;
+        max-width: 90%;
+
+    }
 }
